@@ -1,2 +1,4 @@
 Ce module personalise le module 'account_payment' pour les besoins du métier
 de l'assurance.
+
+- Possibilité de blocage des reversements à un acteur
