@@ -14,3 +14,4 @@ xml:
     account.xml
     move.xml
     payment.xml
+    party.xml
