@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="//field[@name='payable']" position="after">
+        <group id="void" colspan="2"/>
+        <label name="block_payable_payments"/>
+        <field name="block_payable_payments"/>
+    </xpath>
+</data>
