@@ -1,3 +1,4 @@
+* Allow to block payments for a party
 * Add payable payment creation through batch
 
 Version 1.3 - 2015-01-22
